--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,54 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+.button-md {
+    background:#10497D;
+}
+
+.button-small-md {
+    font-size: 10px;
+    padding: 0 1.9em;
+}
+
+.title-header {
+    text-align: center;
+    color:#35A3B6;
+    font-weight: 700;
+}
+
+.text-paragraf {
+    text-align: center;
+    color:#10497D;
+    font-weight: 600;
+}
+
+.logo {
+    width: 140px;
+    margin: 0 auto;
+}
+
+.intro-image {
+    width: 200px;
+    margin: 0 auto;
+}
+
+.toolbar-title-ios {
+    padding: 0 12px;
+    font-size: 1.5rem;
+    font-weight: 500;    
+    text-align: center;
+    color:#35A3B6 !important;
+}
+
+.toolbar-title-md {
+    padding: 0 12px;
+    font-size: 1.5rem;
+    font-weight: 500; 
+    text-align: center;
+    color:#35A3B6 !important;
+}
+
+.botao {
+width: 100%;
+}
